--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -8,6 +8,7 @@
     font-size: 62.5%;
     font-family: "Roboto", sans-serif;
     --text-color: #FFF;
+    --title-color: #E1E1E6
 }
 
 body {
@@ -32,4 +33,52 @@ li a {
     font-size: 2.4rem;
     font-weight: 700;
     text-decoration: none;
+}
+
+.home-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 32rem;
+}
+
+h1 {
+    color: var(--title-color);
+    font-size: 4.8rem;
+    margin-bottom: 2.4rem;
+}
+
+h2 {
+    color: var(--title-color);
+    font-size: 4.8rem;
+    margin-bottom: 1.6rem;
+}
+
+button {
+    padding: 1.2rem 3.2rem;
+    color: var(--text-color);
+    background-color: transparent;
+    text-align: center;
+    font-family: "Roboto", sans-serif;
+    font-size: 1.6rem;
+    font-weight: 700;
+    text-transform: uppercase;
+    border-radius: .4rem;
+    border: .2rem solid var(--text-color);
+    cursor: pointer;
+}
+
+.subtitle {
+    max-width: 850px;
+}
+
+p {
+    color: var(--title-color);
+    font-size: 1.8rem;
+    font-weight: 400;
+}
+
+.container {
+    margin-left: 10.2rem;
+    margin-top: 12.2rem;
 }
